[tool.poetry]
name = "xi"
version = "0.1.0"
description = "Post hoc explanations for ML models through measures of statistical dependence"
authors = ["marco.fumagalli <m.fumagalli68@gmail.com>",
    "valentina.ghidini <vale.ghidini95@gmail.com"]
maintainers = ["marco.fumagalli <m.fumagalli68@gmail.com>",
    "valentina.ghidini <vale.ghidini95@gmail.com"]
readme = "README.md"
include = ["tests/data/winequality-red.csv"]
license = "MIT"
keywords = ["XaI", "explainable", "AI"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.23.2"
pytest = "^7.0"
line-profiler-pycharm = "^1.1.0"
pandas = "^2.0.3"
scipy = "^1.11.2"
matplotlib = "^3.7.2"

[tool.poetry.dev-dependencies]

# Testing
pytest = "*"
coverage = "*"
httpx = "*"
# CI
codecov = "*"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
