[tool.poetry]
name = "xi-method"
version = "0.1.7"
description = "Post hoc explanations for ML models through measures of statistical dependence"
authors = ["marco.fumagalli <m.fumagalli68@gmail.com>",
            "valentina.ghidini <vale.ghidini95@gmail.com"]
maintainers = ["marco.fumagalli <m.fumagalli68@gmail.com>",
            "valentina.ghidini <vale.ghidini95@gmail.com"]
readme = "README.md"
include = ["data/winequality-red.csv"]
repository = "https://github.com/mfumagalli68/xi-method"
license = "MIT"
keywords = ["XaI", "explainable", "AI"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"

]


[tool.poetry.dependencies]
python = ">=3.8"
numpy = "^1.23.2"
pytest = "^7.0"
pandas = "^2.0.3"
scipy=[
    { version = "^1.11.2", python = "~3.9"},
    { version = "^1.11.2", python = "~3.10"},
    { version = "^1.11.2", python = "~3.11"},
    { version = "^1.10.0", python = "~3.8"}
]
matplotlib = "^3.7.2"
tqdm = "^4.66.1"

[tool.poetry.dev-dependencies]

# Testing
pytest = "*"
coverage = "*"
# CI
codecov = "*"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
